--- a/src/Kivy Version/colourPalette.kv
+++ b/src/Kivy Version/colourPalette.kv
@@ -1,3 +1,47 @@
 #:kivy 2.0
+<TextInput>
+    font_size: 26
+    multiline: False
+    size_hint: 0.8, 0.5
+
 <Interface>
     FloatLayout:
+        GridLayout:
+            id: hex_section
+            cols: 2
+            pos_hint: {"x": 2.3, "y": 2.5}
+            size_hint: 3, 0.5
+            background_color: 1, 0, 0,1 
+
+            Label:
+                text: "Hex:"
+
+            TextInput:
+                id: hex_value
+                multiline: False
+                size_hint: 3, 0.5
+                font_size: 26
+
+        GridLayout:
+            id: rgb_section
+            cols: 6
+            pos_hint: {"x": 1.1, "y": 1.5}
+            size_hint: 5, 0.5
+
+            Label:
+                text: "Red:"
+            
+            TextInput:
+                id: red_input
+
+            Label:
+                text: "Green:"
+            
+            TextInput:
+                id: green_input
+
+            Label:
+                text: "Blue:"
+            
+            TextInput:
+                id: blue_input
