--- a/src/kivy_version/colourPalette.kv
+++ b/src/kivy_version/colourPalette.kv
@@ -1,5 +1,9 @@
-#:kivy 2.0
+#:kivy 1.0
 # Applies to all text inputs
+WindowManager:
+    RGBToHex:
+    HexToRGB:
+
 <TextInput>
     font_size: 26
     multiline: False
@@ -8,9 +12,8 @@
 <Label>
     font_size: 30
 
-# Whole Application
-<Interface>
-    # name: "rgb_to_hex"
+<RGBToHex>:
+    name: "rgb_to_hex"
     red_input: red_input
     green_input: green_input
     blue_input: blue_input
@@ -20,6 +23,10 @@
         size: root.width, root.height
 
         Button:
+            on_release:
+                app.root.current = "hex_to_rgb"
+                root.manager.transition.direction = "left"
+
             text:"Hex To RGB"
             font_size: 20
             size_hint: 0.2, 0.1
@@ -71,12 +78,19 @@
             text: "Answer"
             color: "#000000"
             pos_hint: {"y": -0.42}
-        # Hex section of the interface
-        # GridLayout:
-        #     id: hex_section
-        #     cols: 2
-        #     # pos_hint: {"x": 2.3, "y": 2.5}
-        #     size_hint: 3, 0.4
+
+<HexToRGB>:
+    name: "hex_to_rgb"
+    FloatLayout:
+        Label:
+            id:hex_to_rgb_title
+            text: "Hex To RGB"
+            # Hex section of the interface
+            # GridLayout:
+            #     id: hex_section
+            #     cols: 2
+            #     # pos_hint: {"x": 2.3, "y": 2.5}
+            #     size_hint: 3, 0.4
 
         #     Label:
         #         text: "Hex:"
@@ -86,28 +100,3 @@
         #         multiline: False
         #         size_hint: 3, 0.5
         #         font_size: 26
-
-        # # RGB section of the interface 
-        # GridLayout:
-        #     id: rgb_section
-        #     cols: 6
-        #     pos_hint: {"x": 1.1, "y": 1.5}
-        #     size_hint: 5, 0.4
-
-        #     Label:
-        #         text: "Red:"
-            
-        #     TextInput:
-        #         id: red_input
-
-        #     Label:
-        #         text: "Green:"
-            
-        #     TextInput:
-        #         id: green_input
-
-        #     Label:
-        #         text: "Blue:"
-            
-        #     TextInput:
-        #         id: blue_input
